refact: padroniza módulo de notificações para DTO record, enum TipoNotificacao e ajustes gerais (#8)