@@ -1,15 +1,15 @@
 package br.edu.ifpi.ifala.notificacao;
 
-import java.util.List;
-import java.util.stream.Collectors;
-import br.edu.ifpi.ifala.notificacao.dto.NotificationRequestDto;
-import br.edu.ifpi.ifala.notificacao.dto.NotificationResponseDto;
-import br.edu.ifpi.ifala.notificacao.enums.TiposNotificacao;
+import br.edu.ifpi.ifala.notificacao.dto.NotificationRequestDTO;
+import br.edu.ifpi.ifala.notificacao.dto.NotificationResponseDTO;
+import br.edu.ifpi.ifala.notificacao.enums.TipoNotificacao;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
+
+import java.util.List;
 
 @Service
 public class NotificationServiceImpl implements NotificationService {
@@ -20,55 +20,66 @@ public class NotificationServiceImpl implements NotificationService {
     private final NotificationEmailService emailService;
 
     public NotificationServiceImpl(NotificationRepository repository,
-                                   NotificationEmailService emailService) {
+            NotificationEmailService emailService) {
         this.repository = repository;
         this.emailService = emailService;
     }
 
     @Override
-    public NotificationResponseDto create(NotificationRequestDto dto) {
+    public NotificationResponseDTO create(NotificationRequestDTO dto) {
         Notificacao n = new Notificacao();
-        n.setTitulo(dto.getTitulo());
-        n.setMensagem(dto.getMensagem());
-        n.setTipo(dto.getTipo());
+        n.setTitulo(dto.titulo());
+        n.setMensagem(dto.mensagem());
+        n.setTipo(dto.tipo());
 
         Notificacao saved = repository.save(n);
 
-        if (saved.getTipo() == TiposNotificacao.EXTERNO) {
-            log.info("Enviando e-mail (tipo EXTERNO)");
-            // Em produção, buscar destinatários reais.
+        if (saved.getTipo() == TipoNotificacao.EXTERNO) {
+            log.info("Enviando e-mail de notificação externa...");
+
+            // Para ambiente de desenvolvimento:
             emailService.sendNewDenunciaEmail(saved, "sistema-ifala-development@gmail.com");
         }
-        return NotificationResponseDto.fromEntity(saved);
+
+        return NotificationResponseDTO.fromEntity(saved);
     }
 
     @Override
-    public NotificationResponseDto findById(Long id) {
-        Notificacao n = repository.findById(id).orElseThrow(
-            () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Notificação não encontrada")
-        );
-        return NotificationResponseDto.fromEntity(n);
+    public NotificationResponseDTO findById(Long id) {
+        Notificacao n = repository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
+                        "Notificação não encontrada"));
+
+        return NotificationResponseDTO.fromEntity(n);
     }
 
     @Override
-    public List<NotificationResponseDto> findAll() {
-        return repository.findAll()
-                .stream()
-                .map(NotificationResponseDto::fromEntity)
-                .collect(Collectors.toList());
+    public List<NotificationResponseDTO> findAll() {
+        return repository.findAll().stream().map(NotificationResponseDTO::fromEntity).toList(); // Java
+                                                                                                // 16+
+                                                                                                // padrão
+                                                                                                // no
+                                                                                                // IFala
     }
 
     @Override
-    public NotificationResponseDto update(Long id, NotificationRequestDto dto) {
-        Notificacao n = repository.findById(id).orElseThrow(
-            () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Notificação não encontrada")
-        );
-        if (dto.getTitulo() != null) n.setTitulo(dto.getTitulo());
-        if (dto.getMensagem() != null) n.setMensagem(dto.getMensagem());
-        if (dto.getTipo() != null) n.setTipo(dto.getTipo());
+    public NotificationResponseDTO update(Long id, NotificationRequestDTO dto) {
+        Notificacao n = repository.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
+                        "Notificação não encontrada"));
+
+        if (dto.titulo() != null) {
+            n.setTitulo(dto.titulo());
+        }
+        if (dto.mensagem() != null) {
+            n.setMensagem(dto.mensagem());
+        }
+        if (dto.tipo() != null) {
+            n.setTipo(dto.tipo());
+        }
 
         Notificacao updated = repository.save(n);
-        return NotificationResponseDto.fromEntity(updated);
+        return NotificationResponseDTO.fromEntity(updated);
     }
 
     @Override
@@ -76,6 +87,7 @@ public class NotificationServiceImpl implements NotificationService {
         if (!repository.existsById(id)) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Notificação não encontrada");
         }
+
         repository.deleteById(id);
     }
 }
